--- a/css/global.css
+++ b/css/global.css
@@ -3,6 +3,9 @@ body{
     color:#fff;
     text-align: center;
 }
+   .title{font-size:40px;}
+    .subtitle{font-size:25px;}
+    .para1{font-size:18px;}
 h2 {
     text-align: left;
 }
